# dimsum

./: .dockerignore  .gitignore  AreaLabel.template  Cargo.toml  Dockerfile  ItemLabel.template  Label.template  Makefile  README.org  actions.py  apparel.py  behavior.py  bot.py  broken.json  bus.py  carryable.py  crypto.py  dimsum.conf  dimsum.py  ds  edible.py  entity.py  evaluator.py  game.py  grammar.py  graph.template  hooks.py  library.py  logging.json  logging.yml  luaproxy.py  mechanics.py  movement.py  mypy.ini  occupyable.py  persistence.py  props.py  pytest.ini  reply.py  requirements.txt  (+15 more)
dimsum/: actions.py  animals.py  area.py  behavior.py  bot.py  carryable.py  context.py  edible.py  entity.py  envo.py  evaluator.py  events.py  game.py  health.py  library.py  living.py  luaproxy.py  movement.py  persistence.py  reply.py  serializing.py  test.py  test_food.py  test_library.py  test_serialization.py  test_simple.py  things.py  world.py
docs/: BeginnersCreation.md  BeginnersEditing.md  BehindTheScenes.md  EventHandlers.md  WelcomePage.md  conf.py  index.rst  quickstart.rst
docs/source/: brokers.rst  dimsum.rst  domains.rst  ds.rst  dynamic.rst  everything.rst  finders.rst  grammars.rst  handlers.rst  library.rst  loggers.rst  migration.rst  model.rst  modules.rst  saying.rst  (+9 more)
src/: main.rs  scopes.rs
templates/: AreaLabel.template  ItemLabel.template  Label.template  PlayerLabel.template  graph.template
tools/: dump.sh  empty-post-queue.sql  nginx.conf  reformat.sh  startup.sh
web/: README.md  app.ts  package-lock.json  package.json  webpack.config.js
(+402 files in other folders)
