[package]
name = "dimsum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
rusqlite = "0.28.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.1"
